public/src/scss/darkmode.scss
body.darkmode {
	&,
	.sidebar,
	.mainview__top,
	.chatview__input,
	.chatview__input input[type="text"],
	.chatview__controls,
	.channeluserlist,
	.chatview .line__context-before,
	.chatview .line__context-after,
	.sidebar__system-menu {
		background-color: #111;
		color: #ccc;

		border-color: #444;
	}

	h1, h2, h3, h4, h5, h6 {
		color: #eee;
	}

	.loader:before, .loader:after {
		border-bottom-color: #fff;
	}

	.sidebar__head,
	.sidebar__list,
	.sidebar__list-head,
	.settings__section,
	.settings__container,
	.settings__list ul,
	.settings__list-item,
	.settings__add,
	.settings__detail-view {
		border-color: #444;
	}

	.chatview {
		.line__channel,
		.line__channel a,
		.line time,
		.userevent,
		.bunchedevents {
			color: #777;
		}

		.userevent,
		.bunchedevents {
			&:before {
				background-color: #777;
			}
		}

		.line__context {
			&-before--edged {
				border-bottom-color: #111;
			}

			&-after--edged {
				border-top-color: #111;
			}
		}

		.line--connection {
			&:after {
				background-color: #444;
			}

			> span {
				background-color: #111;
			}
		}

		.connectionevent {
			color: #64bcf3;

			&:before {
				background-color: #64bcf3;
			}

			&--bad {
				color: #c00;

				&:before {
					background-color: #c00;
				}
			}
		}
	}

	.chatusername {
		// Increased contrast for colors
		&--color {
			&-0  { color: #0080ff; }
			&-1  { color: #0c8f0c; }
			&-2  { color: #f0087c; }
			&-3  { color: #ce1dea; }
			&-4  { color: #178d65; }
			&-5  { color: #885dfb; }
			&-6  { color: #6b8526; }
			&-7  { color: #b347ea; }
			&-8  { color: #f70510; }
			&-9  { color: #8871ad; }
			&-10 { color: #518585; }
			&-11 { color: #c65e0a; }
			&-12 { color: #808000; }
			&-13 { color: #5e8187; }
			&-14 { color: #6e6ee6; }
			&-15 { color: #92793d; }
			&-16 { color: #887c23; }
			&-17 { color: #4c81a6; }
			&-18 { color: #be6055; }
			&-19 { color: #ae5ead; }
			&-20 { color: #5b9e4c; }
			&-21 { color: #1b8b75; }
			&-22 { color: #ca5757; }
			&-23 { color: #e45d59; }
			&-24 { color: #3f7ade; }
			&-25 { color: #6b77c1; }
			&-26 { color: #c63fcf; }
			&-27 { color: #8c7a4f; }
			&-28 { color: #0b9578; }
			&-29 { color: #569c96; }
		}
	}

	// Highlights
	.chatview .line--highlight,
	.sidebar__menu-link--highlighted {
		background-color: #035;
	}

	.chatview .line--highlight.line--unseen-highlight {
		background-color: #258;
	}

	.chatview .line--highlight mark {
		background-color: rgba(255,255,255,.2);
	}

	.chatview .line--notice {
		background-color: rgba(255,255,255,.1);
	}

	.sidebar__menu-link .badge {
		background-color: rgba(0,0,0,.25);
	}

	// Keep the sidebar right border even in mobile mode
	.sidebar:after {
		background-color: rgba(255,255,255,.2);

		@media #{$mobile-media} {
			display: block;
			transition: .5s left ease-in-out;
		}
	}

	.channeluserlist:after {
		background-color: rgba(255,255,255,.2);
	}

	.sidebar--hidden:after {
		@media #{$mobile-media} {
			left: -1px;
		}
	}

	// Links
	a {
		color: #7be;
	}

	.itemlist a {
		color: inherit;
	}

	// Chromes
	.settingsview input,
	.settingsview button,
	.settingsview select,
	.settingsview textarea,
	.logbrowser input {
		border-color: #666;
		background-color: #333;
		color: #eee;
	}

	.settings__detail-view {
		background-color: #222;
	}

	.settings__detail-view .settings__list {
		background-color: #111;
	}

	.settings__list-item--selected,
	.logbrowser__items a.current {
		background-color: #7be;
		border-color: #7be;
		color: #000;
	}

	.sidebar__system-menu {
		&, .sep {
			border-color: #666;
		}
	}
}

